--- a/Banda1/Banda1/src/main/resources/templates/formularioEvento.html
+++ b/Banda1/Banda1/src/main/resources/templates/formularioEvento.html
@@ -7,6 +7,8 @@
 	<title>Rosario de Cádiz</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="../static/js/cambiarCamposColor.js"></script>
+
 </head>
 
 <style>
@@ -36,10 +38,12 @@
 		border-radius: 25px;
 		text-align: center;
 	}
+	
 </style>
 
 <body>
 	<nav th:replace="~{fragmentos/menu::menu}"></nav>
+
 	<div class="alert alert-warning alert-dismissible text-center" id="advertencia" role="alert" th:if="${param.error}"
 		style="margin-bottom: 2em; margin-top: -2em;">
 		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -53,17 +57,17 @@
 		<form id="productos" th:action="${eventos.id != 0} ? @{/editar/submit} : @{/nuevo/submit}"
 			th:object="${eventos}" method="post">
 
-			<input th:if="${eventos.id != 0}" type="hidden" name="id" th:field="*{id}" />
+			<input id="color" th:if="${eventos.id != 0}" type="hidden" name="id" th:field="*{id}" />
 
 			<div class="mb-3">
 				<label class="form-label">Fecha</label>
-				<input type="date" name="fecha" th:field="*{fecha}" placeholder="fecha" value="2022-05-20"
+				<input id="color" type="date" name="fecha" th:field="*{fecha}" placeholder="fecha" value="2022-05-20"
 					min="2022-01-01" max="2025-12-31" required />
 			</div>
 
 			<div class="mb-3">
 				<label class="form-label">Lugar</label>
-				<input type="text" name="lugar" th:field="*{lugar}" placeholder="Lugar" required />
+				<input id="color" type="text" name="lugar" th:field="*{lugar}" placeholder="Lugar" required />
 			</div>
 
 			<div class="mb-3">
@@ -73,7 +77,7 @@
 
 			<div class="mb-3">
 				<label class="form-label">Organizador</label>
-				<input type="text" name="organizador" th:field="*{organizador}" placeholder="Organizador" required />
+				<input id="color" type="text" name="organizador" th:field="*{organizador}" placeholder="Organizador" required />
 			</div>
 
 			<input type="submit" name="enviar" value="Enviar" />
