--- a/Banda1/Banda1/src/main/resources/templates/formularioCategoria.html
+++ b/Banda1/Banda1/src/main/resources/templates/formularioCategoria.html
@@ -6,13 +6,14 @@
         <title>Rosario de Cádiz</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <link rel='stylesheet' type='text/css' media='screen' href='prinipal.css'>
         
   </head>
   
   <body>
   
     <nav th:replace="~{fragmentos/menu::menu}"></nav>
+
+	<div id="error"></div>
     	
     	<div class="alert alert-warning alert-dismissible text-center" id="advertencia" role="alert" th:if="${param.error}"
 				style="margin-bottom: 2em; margin-top: -2em;">
@@ -25,26 +26,28 @@
   	<div class="container">
 		<div class="row">
 			<div class="col-md-offset-2 col-md-8">
-				<form method="post" action="#" th:action="@{/categoriaNueva/submit}" th:object="${categoria}">
 				
-			<input th:if="${categoria.id != 0}" type="hidden" name="id" th:field="*{id}" />
+				<form name="formulario" method="post" action="#" th:action="@{/categoriaNueva/submit}" th:object="${categoria}">
+				
+					<input th:if="${categoria.id != 0}" type="hidden" name="id" th:field="*{id}" />
 					
 					<div class="form-group">
 						<label for="nombre">Nombre</label> 
-						<input type="text" class="form-control" id="nombre" placeholder="Nombre" required="required" th:field="*{nombre}">
+						<input type="text" class="form-control" id="nombre" placeholder="Nombre" th:field="*{nombre}">
 					</div>
 				
 					<div class="form-group">
-						<label for="descipcion">Descripción</label> 
+						<label for="descripcion">Descripción</label> 
 						<input type="text" class="form-control" id="descripcion" placeholder="descripcion" th:field="*{descripcion}">
 					</div>
 
-					<button type="submit" class="btn btn-primary btn-default">Enviar</button>
+					<button id="enviar" type="submit" value="enviar" class="btn btn-primary btn-default">Enviar</button>
 				</form>
 			</div>
 		</div>
 	</div>
   
-  
+	<script th:src="@{/js/validacion.js}" defer></script>
+
   </body>
 </html>
