--- a/Banda1/Banda1/src/main/resources/templates/categoria.html
+++ b/Banda1/Banda1/src/main/resources/templates/categoria.html
@@ -10,19 +10,26 @@
         
   </head>
   
+  <style>
+  
+  table{
+	border-color: black;
+	border-radius: 25px; 
+}
+  
+  </style>
+    
   <body>
   
   		<nav th:replace="~{fragmentos/menu::menu}"></nav>
 
-  <div class="container">
-  	<div class="row">
-  		<div class="col-md-offset-2 col-md-8">
+
   			<div class="pull-right">
   				<a th:href="@{/categoriaNueva}" class="btn btn-primary"><i class="bi bi-cloud-plus"></i></a>
   				
   			</div>
   			
-  			<table class="table">
+  			<table class="table table-striped">
   				<thead>
   					<tr>
   						<th>Id</th>
@@ -42,5 +49,11 @@
 						<td>
 							<a href="#" class="btn btn-danger" th:href="@{/borrarCategoria/{id}(id=${categoria.id})}"><i class="bi bi-trash3"></i></a>
 						</td>
+						
+  					</tr>
+  				</tbody>
+  			</table>
+
+  
   
   </body>
