--- a/Banda1/Banda1/src/main/resources/templates/formularioCategoria.html
+++ b/Banda1/Banda1/src/main/resources/templates/formularioCategoria.html
@@ -7,6 +7,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         
+  
+		<script th:src="@{/js/validacion.js}" defer></script>
+
   </head>
   
   <body>
@@ -27,7 +30,7 @@
 		<div class="row">
 			<div class="col-md-offset-2 col-md-8">
 				
-				<form name="formulario" method="post" action="#" th:action="@{/categoriaNueva/submit}" th:object="${categoria}">
+				<form id="formulario" onsubmit="return enviarFormulario()" name="formulario" method="post" action="#" th:action="@{/categoriaNueva/submit}" th:object="${categoria}">
 				
 					<input th:if="${categoria.id != 0}" type="hidden" name="id" th:field="*{id}" />
 					
@@ -35,19 +38,20 @@
 						<label for="nombre">Nombre</label> 
 						<input type="text" class="form-control" id="nombre" placeholder="Nombre" th:field="*{nombre}">
 					</div>
-				
+					
+					<div class="mensajeError text-danger" id="errorNombre">Nombre Incorrecto</div>
+
 					<div class="form-group">
 						<label for="descripcion">Descripción</label> 
 						<input type="text" class="form-control" id="descripcion" placeholder="descripcion" th:field="*{descripcion}">
 					</div>
 
-					<button id="enviar" type="submit" value="enviar" class="btn btn-primary btn-default">Enviar</button>
+					<div class="mensajeError text-danger" id="errorDescripcion">Descripción Incorrecta, debe de haber un mínimo de 10 palabras.</div>
+
+					<button type="submit" id="enviar" class="btn btn-primary mb-2">Enviar</button>
 				</form>
 			</div>
 		</div>
 	</div>
-  
-	<script th:src="@{/js/validacion.js}" defer></script>
-
   </body>
 </html>
