--- a/Banda1/Banda1/src/main/resources/templates/productos.html
+++ b/Banda1/Banda1/src/main/resources/templates/productos.html
@@ -27,19 +27,22 @@
 
 	<nav th:replace="~{fragmentos/menu::menu}"></nav>
 
-<form id="buscar" class="d-flex" method="get" th:action = "@{/buscar}">
-	<input class="dropdown-item" type ="text" placeholder = "Nombre del Producto"
-		name = "nombre" id= "nombre" th:value="${param.nombre}">
-	<input type="submit" value="Enviar">
-</form>
+	<form id="buscar" class="d-flex" method="get" th:action = "@{/buscar}">
 	
-
+		<input class="dropdown-item" type ="text" placeholder = "Nombre del Producto"
+			name = "nombre" id= "nombre" th:value="${param.nombre}">
+	
+		<input type="submit" value="Enviar">
+	</form>
+	
+	
+	
 	<div class="container-fluid">
 		<div class="row">
 		<div class="col-sm-3 mb-3" th:each="productos : ${lista}">
   		
   		<div class="card mb-3 col-item h-100">
-    		<img class="img-responsive h-100" th:src="${productos.img}" alt="Card image cap">
+    		<img class="img-responsive h-100" th:src="${productos.img}" th:alt="${productos.texto}">
     		<div class="card-body text-center">
       			<h5 class="card-title"th:text="${productos.nombre}"></h5>
       			<p class="card-text" th:text="${productos.cantidad}"></p>
