--- a/Banda1/Banda1/src/main/resources/templates/eventosAdmin.html
+++ b/Banda1/Banda1/src/main/resources/templates/eventosAdmin.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head th:replace="~{fragmentos/head::head}">
+<head >
 
+	<meta charset='utf-8'>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+	<title>Rosario de Cádiz</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+	
 </head>
 <style>
 	
