--- a/Banda1/Banda1/src/main/resources/templates/formularioCategoria.html
+++ b/Banda1/Banda1/src/main/resources/templates/formularioCategoria.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head th:replace="~{fragmentos/head::head}">
+	<head>
+	
    <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Rosario de Cádiz</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        
-  
-		<script th:src="@{/js/validacion.js}" defer></script>
+		<script th:src="@{/js/validacion.js}"></script>
 
+		<style type="text/css">
+			.mensajeError{
+				visibility: hidden;
+			}
+
+		</style>
+		
   </head>
   
   <body>
@@ -30,7 +36,7 @@
 		<div class="row">
 			<div class="col-md-offset-2 col-md-8">
 				
-				<form id="formulario" onsubmit="return enviarFormulario()" name="formulario" method="post" action="#" th:action="@{/categoriaNueva/submit}" th:object="${categoria}">
+				<form id="formulario" onsubmit="return enviarFormulario();" name="formulario" method="post" action="#" th:action="@{/categoriaNueva/submit}" th:object="${categoria}">
 				
 					<input th:if="${categoria.id != 0}" type="hidden" name="id" th:field="*{id}" />
 					
@@ -43,7 +49,7 @@
 
 					<div class="form-group">
 						<label for="descripcion">Descripción</label> 
-						<input type="text" class="form-control" id="descripcion" placeholder="descripcion" th:field="*{descripcion}">
+						<input type="text" class="form-control" id="descripcion" placeholder="Descripcion" th:field="*{descripcion}">
 					</div>
 
 					<div class="mensajeError text-danger" id="errorDescripcion">Descripción Incorrecta, debe de haber un mínimo de 10 palabras.</div>
