--- a/Banda1/Banda1/src/main/resources/templates/formularioEvento.html
+++ b/Banda1/Banda1/src/main/resources/templates/formularioEvento.html
@@ -1,42 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head th:replace="~{fragmentos/head::head}">
+<head>
 	<meta charset='utf-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<title>Rosario de Cádiz</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="../static/js/cambiarCamposColor.js"></script>
+	<script th:src="@{/js/validacionEventos.js}" defer></script>
 
 </head>
 
-<style>
-	* {
-		margin: 0;
-		padding: 0;
-		-webkit-font-smoothing: antialiased;
-		-moz-font-smoothing: antialiased;
-		-o-font-smoothing: antialiased;
-		text-rendering: optimizeLegibility;
-	}
-
-	body {
-		font-family: Arial, Helvetica, sans-serif;
-		background-color: rgb(212, 239, 255);
-		background: linear-gradient(to right, rgb(77, 77, 77), rgb(37, 37, 37));
-	}
-
-	form {
-		font-family: Arial, Helvetica, sans-serif;
-	}
-
-	#productos {
-		background: #F9F9F9;
-		padding: 25px;
-		margin: 50px 0;
-		border-radius: 25px;
-		text-align: center;
+<style type="text/css">
+	
+	.mensajeError{
+		visibility: hidden;
 	}
 	
 </style>
@@ -54,33 +32,41 @@
 
 	<div class="container" id="formulario">
 
-		<form id="productos" th:action="${eventos.id != 0} ? @{/editar/submit} : @{/nuevo/submit}"
+		<form id="formulario" onsubmit="return validarFormulario();" th:action="${eventos.id != 0} ? @{/editar/submit} : @{/nuevo/submit}"
 			th:object="${eventos}" method="post">
 
 			<input id="color" th:if="${eventos.id != 0}" type="hidden" name="id" th:field="*{id}" />
 
 			<div class="mb-3">
 				<label class="form-label">Fecha</label>
-				<input id="color" type="date" name="fecha" th:field="*{fecha}" placeholder="fecha" value="2022-05-20"
-					min="2022-01-01" max="2025-12-31" required />
+				<input id="fecha" type="date" name="fecha" th:field="*{fecha}" placeholder="fecha" value="2022-05-20"
+					min="2022-01-01" max="2025-12-31" />
 			</div>
+
+			<div class="mensajeError text-danger" id="errorFecha">Introduzca una fecha</div>
 
 			<div class="mb-3">
-				<label class="form-label">Lugar</label>
-				<input id="color" type="text" name="lugar" th:field="*{lugar}" placeholder="Lugar" required />
+				<label for="lugar" class="form-label">Lugar</label>
+				<input id="lugar" type="text" name="lugar" th:field="*{lugar}" placeholder="Lugar" />
 			</div>
+
+			<div class="mensajeError text-danger" id="errorLugar">Introduzca un lugar</div>
 
 			<div class="mb-3">
-				<label class="form-label">Asunto</label>
-				<input type="text" name="asunto" th:field="*{asunto}" placeholder="Asunto" required />
+				<label for="asunto" class="form-label">Asunto</label>
+				<input id="asunto" type="text" name="asunto" th:field="*{asunto}" placeholder="Asunto" />
 			</div>
+
+			<div class="mensajeError text-danger" id="errorAsunto">Introduzca un asunto</div>
 
 			<div class="mb-3">
-				<label class="form-label">Organizador</label>
-				<input id="color" type="text" name="organizador" th:field="*{organizador}" placeholder="Organizador" required />
+				<label for="organizador" class="form-label">Organizador</label>
+				<input id="organizador" type="text" name="organizador" th:field="*{organizador}" placeholder="Organizador" />
 			</div>
 
-			<input type="submit" name="enviar" value="Enviar" />
+			<div class="mensajeError text-danger" id="errorOrganizador">Introduzca el organizador</div>
+
+			<button type="submit" id="enviar" class="btn btn-primary mb-2">Enviar</button>
 		</form>
 
 	</div>
