--- a/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
+++ b/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
@@ -31,7 +31,7 @@
 						<li class="nav-item"><a class="nav-link" href="/lista">Productos</a></li>
 						<li class="nav-item"><a class="nav-link" href="/carrito">Carrito</a></li>
 						
-						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+					<!-->	<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
 							 href="#" id="navbarDarkDropdownMenuLink"
 							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>					
 							<ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
@@ -41,7 +41,7 @@
 										th:text="${categoria.nombre}"></a>
 								</th:block>
 							</ul>
-						</li>
+						</li><!-->
 						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
 								sec:authorize="hasRole('ROLE_ADMIN')" href="#" id="navbarDarkDropdownMenuLink"
 								role="button" data-bs-toggle="dropdown" aria-expanded="false">Gestión</a>
