--- a/Banda1/Banda1/src/main/resources/templates/fragmentos/footer.html
+++ b/Banda1/Banda1/src/main/resources/templates/fragmentos/footer.html
@@ -92,7 +92,7 @@
          >
       © 202 Copyright:
       <a class="text-white" href="https://mdbootstrap.com/"
-         >MDBootstrap.com</a
+         >Ana B.L.</a
         >
     </div>
   </footer>
