--- a/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
+++ b/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
@@ -31,17 +31,21 @@
 						<li class="nav-item"><a class="nav-link" href="/lista">Productos</a></li>
 						<li class="nav-item"><a class="nav-link" href="/carrito">Carrito</a></li>
 						
-					<!-->	<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
-							 href="#" id="navbarDarkDropdownMenuLink"
-							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>					
-							<ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
-								<th:block th:each="categoria : ${lista}">
-									<a class="dropdown-item text-dark"
-										th:href="@{/categoria/{id}(id=${categoria.id})}"
-										th:text="${categoria.nombre}"></a>
-								</th:block>
-							</ul>
-						</li><!-->
+					<div class="dropdown">
+
+                                <button type="button"
+                                    class="btn btn-secondary dropdown-toggle bg-light border border-dark text-muted"
+                                    data-bs-toggle="dropdown">
+                                    Categorías
+                                </button>
+                                <ul class="dropdown-menu bg-light text-dark">
+                                    <th:block th:each="categoria : ${lista}">
+                                        <a class="dropdown-item text-dark"
+                                            th:href="@{/productos/categoria/{id}(id=${categoria.id})}"
+                                            th:text="${categoria.nombre}"></a>
+                                    </th:block>
+                                </ul>
+                            </div>
 						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
 								sec:authorize="hasRole('ROLE_ADMIN')" href="#" id="navbarDarkDropdownMenuLink"
 								role="button" data-bs-toggle="dropdown" aria-expanded="false">Gestión</a>
