--- a/Banda1/Banda1/src/main/resources/templates/productos.html
+++ b/Banda1/Banda1/src/main/resources/templates/productos.html
@@ -53,9 +53,14 @@
       			<h5 class="card-title"th:text="${productos.nombre}"></h5>
       			<p class="card-text" th:text="${productos.cantidad}"></p>
       			<p class="card-text" th:text="${#numbers.formatCurrency(productos.precio)}"></p>
+      			<div class="btn-group">
+      				<a><button type="button"
+									class="btn btn-sm btn-primary m-2 ">Añadir al
+									carrito</button></a>
+      			</div>
     		</div>	
   		</div>
-  		
+  		<!-->th:href="@{/carrito/productoACarrito/{id}(id=${manga.id})}"  ESTO VA EL EN A PRIMERO DEL BOTÓN DE CARRITO<!-->
 		</div>
 	</div>
 	</div>	
