--- a/Banda1/Banda1/src/main/resources/templates/formularioCategoria.html
+++ b/Banda1/Banda1/src/main/resources/templates/formularioCategoria.html
@@ -29,7 +29,7 @@
 			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
 			</button>
-				<span class="text-dark">¡No se puede eliminar una categoria con productos adentro!</span>
+				<span th:if = "${param.error}" class="text-dark">¡No se puede eliminar una categoria con productos adentro!</span>
 		</div>
   
   	<div class="container">
