--- a/Banda1/Banda1/src/main/resources/templates/fragmentos/footer.html
+++ b/Banda1/Banda1/src/main/resources/templates/fragmentos/footer.html
@@ -6,96 +6,113 @@
         <title>Rosario de Cádiz</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <link rel='stylesheet' type='text/css' media='screen' href='prinipal.css'>
-        
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   </head>
 
 <body>
 
-<div class="container my-5">
-  <footer class="text-center text-white" style="background-color: rgb(70, 70, 70)"th:fragment="footer" >
-    <div class="container">
-      <section class="mt-5">
-        <div class="row text-center d-flex justify-content-center pt-5">
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="text-white">About us</a>
-            </h6>
+<div class="contens my-5 w-100" id="footer">
+
+            <footer class="bg-secondary text-center text-lg-start text-white w-100" id="footer">
+              <div class="container p-4">
+
+                <div class="row my-5">
+                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          
+                    <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
+                      <img th:src="@{media/logo.png}" height="250" alt="logo"
+                           loading="lazy" />
+                    </div>
+          
+                    <p class="text-center">Rosario de Cádiz es Sentir </p>
+                    
+                    <ul class="list-unstyled d-flex flex-row justify-content-center">
+                    
+                      <li>
+                        <a href="https://es-es.facebook.com/Rosariodecadiz" class="text-white me-4">
+         					 <i class="bi bi-facebook"></i>
+     				   </a>
+                      </li>
+                     
+                      <li>
+                          <a href="https://www.instagram.com/bandarosariodecadiz/?hl=es" class="text-white me-4">
+         					 <i class="bi bi-instagram"></i>
+        				  </a>
+                      </li>
+                    
+                      <li>
+   						  <a href="https://rosariodecadiz.com/" class="text-white me-4">
+          					<i class="bi bi-google"></i>
+        				  </a>
+                      </li>
+                   
+                      <li>
+                       	<a href="https://twitter.com/RosariodeCadiz?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="text-white me-4">
+		  					<i class="bi bi-twitter"></i>
+        				</a>
+                      </li>
+                 
+                    </ul>
+          
+                  </div>
+          
+              
+                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase mb-4">Información extra</h5>
+          
+                    <ul class="list-unstyled">
+                      <li class="mb-2">
+                        <a href="#" class="text-white"><i class="fas fa-paw pe-3"></i>Sobre Nosotros</a>
+                      </li>
+                      <li class="mb-2">
+                        <a href="#" class="text-white"><i class="fas fa-paw pe-3"></i>Sentirse Rosario</a>
+                      </li>
+                      <li class="mb-2">
+                        <a href="#" class="text-white"><i class="fas fa-paw pe-3"></i>Productos de la banda</a>
+                      </li>
+                    </ul>
+                  </div>
+          
+                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase mb-4">Contacto</h5>
+          
+                    <ul class="list-unstyled">
+                      <li class="mb-2">
+                        <a href="#" class="text-white"><i class="fas fa-paw pe-3"></i>Móvil: 123456789</a>
+                      </li>
+                      <li class="mb-2">
+                        <a href="#" class="text-white"><i class="fas fa-paw pe-3"></i>Fijo: 123456789</a>
+                      </li>
+                      <li class="mb-2">
+                        <a href="#" class="text-white"><i class="fas fa-paw pe-3"></i>Email: rosariodecadiz@gmail.com</a>
+                      </li>
+                    </ul>
+                  </div>
+          
+                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase mb-4">Bandas Colaboradoras</h5>
+          
+                    <ul class="list-unstyled">
+                      <li>
+                        <p><i class="fas fa-map-marker-alt pe-2"></i>Tres Caidas de Triana</p>
+                      </li>
+                      <li>
+                        <p><i class="fas fa-phone pe-2"></i>AM Resurrección</p>
+                      </li>
+                      <li>
+                        <p><i class="fas fa-envelope pe-2 mb-0"></i>Julian Cerdán</p>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+          
+              <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+                © 2022 Copyright
+              </div>
+              
+            </footer>
+          
           </div>
 
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="text-white">Products</a>
-            </h6>
-          </div>
-
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="text-white">Awards</a>
-            </h6>
-          </div>
-
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="text-white">Help</a>
-            </h6>
-          </div>
-
-          <div class="col-md-2">
-            <h6 class="text-uppercase font-weight-bold">
-              <a href="#!" class="text-white">Contact</a>
-            </h6>
-          </div>
-        </div>
-      </section>
-
-      <hr class="my-5" />
-
-      <section class="mb-5">
-        <div class="row d-flex justify-content-center">
-          <div class="col-lg-8">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-              distinctio earum repellat quaerat voluptatibus placeat nam,
-              commodi optio pariatur est quia magnam eum harum corrupti
-              dicta, aliquam sequi voluptate quas.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <section class="text-center mb-5">
-        <a href="" class="text-white me-4">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-google"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-github"></i>
-        </a>
-      </section>
-    </div>
-
-    <div
-         class="text-center p-3"
-         style="background-color: rgba(0, 0, 0, 0.2)"
-         >
-      © 202 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/"
-         >Ana B.L.</a
-        >
-    </div>
-  </footer>
-</div>
-	
 </body>
