--- a/Banda1/Banda1/src/main/resources/templates/productos.html
+++ b/Banda1/Banda1/src/main/resources/templates/productos.html
@@ -7,7 +7,9 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-		
+		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 </head>
 <style>
 	table{
@@ -43,7 +45,7 @@
 	
 	
 	
-	<div class="container-fluid">
+	<div data-aos="flip-left" class="container-fluid">
 		<div class="row">
 		<div class="col-sm-3 mb-3" th:each="productos : ${lista}">
   		
@@ -65,8 +67,11 @@
   		<!-->th:href="@{/carrito/productoACarrito/{id}(id=${manga.id})}"  ESTO VA EL EN A PRIMERO DEL BOTÓN DE CARRITO<!-->
 		</div>
 	</div>
-	</div>	
+	</div>	  
 	
+	<script>
+  			AOS.init();
+	</script>
 	<footer th:replace="~{fragmentos/footer::footer}"></footer>
 	
 	<th:block th:replace=~{fragmentos/jsfinal::javascriptfinal}></th:block>
