--- a/Banda1/Banda1/src/main/resources/templates/categoria.html
+++ b/Banda1/Banda1/src/main/resources/templates/categoria.html
@@ -23,6 +23,14 @@
   <body>
   
   		<nav th:replace="~{fragmentos/menu::menu}"></nav>
+  		
+  		  	<div class="alert alert-warning alert-dismissible text-center" id="advertencia" role="alert" th:if="${param.error}"
+				style="margin-bottom: 2em; margin-top: -2em;">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+				<span class="text-dark">¡No se puede eliminar una categoria con productos adentro!</span>
+		</div>
 
 
   			<div class="pull-right">
@@ -32,10 +40,12 @@
   			
   			<table class="table table-striped">
   				<thead>
-  					<tr>
+					<thead class="table-dark"> 
   						<th>Id</th>
   						<th>Nombre</th>
   						<th>Descripción</th>
+  						<th>Editar</th>
+  						<th>Eliminar</th>
   					</tr>
   				</thead>
   				
