--- a/Banda1/Banda1/src/main/resources/templates/carrito.html
+++ b/Banda1/Banda1/src/main/resources/templates/carrito.html
@@ -7,8 +7,25 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+
 
 </head>
+<style>
+
+	table{
+
+		margin: 0 auto;
+		border-radius: 25%;
+	}
+	
+	.container{
+		
+		width: 900px;
+		margin: 0 auto;
+		
+	}
+</style>
 
 <body>
 
@@ -17,23 +34,61 @@
 <main class="container-fluid">
 
 	<h1>Carrito</h1>
+	
+		<div class="justify-content center">
+		<button class=" btn btn-light border border-0 bg-dark mt-3 text-light" data-bs-toggle="modal"
+			data-bs-target="#myModal">
+			Comprar</button>
+
+		<div class="modal" id="myModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+
+					<div class="modal-header">
+						<h4 class="modal-title">Usted...</h4>
+						<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+					</div>
+
+					<div class="modal-body">
+						<p> Esta seguro de finalizar su compra?.</p>
+						
+						  </div>
+					
+						  <div class=" modal-footer">
+						  <a th:href="@{/carrito/checkout}"><button class="btn btn-light border border-0 bg-dark mt-3 text-light">Sí</button></a>
+								<a><button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button></a>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<a th:href="@{/lista}"><button class=" btn btn-light border border-0 bg-dark mt-3 text-light">Seguir
+				comprando</button></a>
+	</div>
+	
+	
+<div class="container">
+
 	<div class="row">
-		<div class="col-lg-8">
-			<table class=" table table-striped table-bordered" id="tabla">
-				<thead>
+		<div class="col-md-offset-1 col-md-10">
+			<table class=" table table-striped" id="tabla">
+				<thead class="table-dark">
 					<tr>
 						<th>Productos</th>
 						<th>Nombre</th>
 						<th>Cantidad</th>
 						<th class="text-center">Precio</th>
-						<th class="tect-center">Precio Total</th>
-						<th></th>
+						<th class="text-center">Precio Total</th>
+						<th class="text-center">Eliminar Producto</th>
+
 					</tr>
 				</thead>
 
 				<tbody>
 
 					<tr th:each="element : ${productos.entrySet()}">
+						<td th:text="${element.key.img}"></td>
 						<td th:text="${element.key.nombre}"></td>
 						<td th:text="${element.value}"></td>
 						<td><strong th:text="${element.key.precio}"></strong></td>
@@ -42,7 +97,7 @@
 						<td>
 							<a th:href="@{/carrito/borrarProductoCarrito/{id}(id=${element.key.id})}">
 								<button type="button" class="btn btn-danger">
-									Eliminar
+									<i class="bi bi-trash3"></i>
 								</button></a>
 						</td>
 					</tr>
@@ -51,19 +106,17 @@
 						<h4>Precio Final: </h4>
 					
 					<td>
-
 					</td>
+					
 					<td>
-
-					</td>
-
-					<td>
-
 					</td>
 
 					<td>
-
 					</td>
+
+					<td>
+					</td>
+					
 					</td>
 
 					<td class="text-right">
@@ -73,50 +126,7 @@
 			</table>
 		</div>
 	</div>
-
-	<div class="justify-content center">
-		<button class=" btn btn-light border border-0 bg-success mt-3 text-light" data-bs-toggle="modal"
-			data-bs-target="#myModal">
-			Comprar</button>
-		<!-- The Modal -->
-		<div class="modal" id="myModal">
-			<div class="modal-dialog">
-				<div class="modal-content">
-
-					<!-- Modal Header -->
-					<div class="modal-header">
-						<h4 class="modal-title">Usted...</h4>
-						<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-					</div>
-
-					<!-- Modal body -->
-					<div class="modal-body">
-						<p> Esta seguro de finalizar su compra?.</p>
-						
-						  </div>
-					
-						  <!-- Modal footer -->
-						  <div class=" modal-footer">
-						  <a th:href="@{/carrito/checkout}"><button class="btn btn-light border border-0 bg-success mt-3 text-light">Sí</button></a>
-								<a><button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button></a>
-					</div>
-
-				</div>
-			</div>
-		</div>
-
-		<a th:href="@{/lista}"><button class=" btn btn-light border border-0 bg-success mt-3 text-light">Seguir
-				comprando</button></a>
-	</div>
-	
-	
-
-
-
-
-
-
-
+</div>
 
 
 
