--- a/Banda1/Banda1/src/main/resources/templates/eventosAdmin.html
+++ b/Banda1/Banda1/src/main/resources/templates/eventosAdmin.html
@@ -24,6 +24,10 @@
 
 	<nav th:replace="~{fragmentos/menu::menu}"></nav>
 	
+	
+	<div class="container">
+		<div class="row">
+			<div class="col-md-offset-1 col-md-10">
 				<div class="pull-right">
 					<a class="btn btn-primary" th:href="@{/nuevo}"><i class="bi bi-cloud-plus"></i></a>
 				</div>
@@ -37,7 +41,8 @@
 							<th>Lugar</th>
 							<th>Asunto</th>
 							<th>Organizador</th>
-							<th>Gestión</th>
+							<th>Editar</th>
+							<th>Eliminar</th>		
 						</tr>
 					</thead >
 					<tbody>
@@ -49,15 +54,43 @@
 							<td th:text="${eventos.organizador}">Organizador</td>
 
 							<td>
-								<a href="#" class="btn btn-primary" th:href="@{/editar/{id}(id=${eventos.id})}"><i class="bi bi-pencil-square"></i></a> |
-								<a href="#"  class="btn btn-danger" th:href="@{/borrar/{id}(id=${eventos.id})}"><i class="bi bi-trash3"></i></a>
+								<a href="#" class="btn btn-primary" th:href="@{/editar/{id}(id=${eventos.id})}"><i class="bi bi-pencil-square"></i></a> 
+							</td>
+							
+							<td>
+								<a href="#" th:href="@{/borrar/{id}(id=${eventos.id})}">
+								<button type="button" class="btn btn-danger" data-toggle="modal"
+									data-target="#delete-modal"><i class="bi bi-trash3"></i></button></a>
 							</td>
 
 
 					</tbody>
 
 				</table>
+			</div>
+		</div>
+	</div>
+	
+<div class="modal fade" id="delete-modal" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title">Borrar Evento</h4>
+				</div>
+				<div class="modal-body">
+					<p>¿Está usted seguro de borrar este evento?</p>
+					<button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+					<a href="#" class="btn btn-danger">Sí</a>
+				</div>
+			</div>
 
+		</div>
+</div>
+	
 	<th:block th:replace=~{fragmentos/jsfinal::javascriptfinal}></th:block>
 </body>
 
