--- a/Banda1/Banda1/src/main/resources/templates/productos.html
+++ b/Banda1/Banda1/src/main/resources/templates/productos.html
@@ -30,20 +30,32 @@
             font-family: Arial, Helvetica, sans-serif;
             font-style: oblique;
         }
+
+		form{
+
+			border-color: black;
+			padding-right: 50%;
+		}
 </style>
 <body>
 
 	<nav th:replace="~{fragmentos/menu::menu}"></nav>
 
-	<form id="buscar" class="d-flex" method="get" th:action = "@{/buscar}">
+<div class="col-12 bg-light  mb-3 p-4">
+	<div class="row">
+		<div class="col-6">
+			<form id="buscar" class="d-flex border-0" method="get" th:action = "@{/buscar}">
 	
-		<input class="dropdown-item" type ="text" placeholder = "Nombre del Producto"
-			name = "nombre" id= "nombre" th:value="${param.nombre}">
+				<input class="dropdown-item ml-1 p-2" type ="text" placeholder = "Buscar por Productos o Categorias"
+					name = "nombre" id= "nombre" th:value="${param.nombre}">
+			
+				<button class="btn btn-dark p-2" type="submit">Buscar</button>
+			</form>
+		</div>
+	</div>
+</div>
 	
-		<input type="submit" value="Enviar">
-	</form>
-	
-	
+
 	
 	<div data-aos="flip-left" class="container-fluid">
 		<div class="row">
@@ -54,17 +66,15 @@
     		<div class="card-body text-center">
       			<h5 class="card-title"th:text="${productos.nombre}"></h5>
       			<p class="card-text" th:text="${productos.cantidad}"></p>
-      			<p class="card-text" th:text="${productos.proveedores}"></p>
-      			<p class="card-text" th:text="${productos.envio}"></p>
+      			<p class="card-text" th:text="${productos.proveedor}"></p>
       			<p class="card-text" th:text="${#numbers.formatCurrency(productos.precio)}"></p>
       			<div class="btn-group">
-      				<a href="/lista" th:href="@{/carrito/productoACarrito/{id}(id=${productos.id})}"><button type="button"
+      				<a sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_USER')" th:href="@{/carrito/productoACarrito/{id}(id=${productos.id})}" href="/lista" ><button type="button"
 									class="btn btn-sm btn-primary m-2 ">Añadir al
 									carrito</button></a>
       			</div>
     		</div>	
   		</div>
-  		<!-->th:href="@{/carrito/productoACarrito/{id}(id=${manga.id})}"  ESTO VA EL EN A PRIMERO DEL BOTÓN DE CARRITO<!-->
 		</div>
 	</div>
 	</div>	  
@@ -72,6 +82,7 @@
 	<script>
   			AOS.init();
 	</script>
+	
 	<footer th:replace="~{fragmentos/footer::footer}"></footer>
 	
 	<th:block th:replace=~{fragmentos/jsfinal::javascriptfinal}></th:block>
