--- a/Banda1/Banda1/src/main/resources/templates/productosAdmin.html
+++ b/Banda1/Banda1/src/main/resources/templates/productosAdmin.html
@@ -26,7 +26,9 @@
 	<nav th:replace="~{fragmentos/menu::menu}"></nav>
 
 
-	
+	<div class="container">
+		<div class="row">
+			<div class="col-md-offset-1 col-md-10">	
 				<div class="pull-right">
 					<a class="btn btn-primary" th:href="@{/nuevoProducto}"><i class="bi bi-cloud-plus"></i></a>
 				</div>
@@ -50,11 +52,38 @@
 							<td th:text="${productos.cantidad}">Cantidad</td>
 							<td th:text="${#numbers.formatCurrency(productos.precio)}">Precio</td>
 							<td><a href="#" class="btn btn-primary" th:href="@{/editarProducto/{id}(id=${productos.id})}"><i class="bi bi-pencil-square"></i></a></td>									
-							<td><a href="#" class="btn btn-danger" th:href="@{/borrarProducto/{id}(id=${productos.id})}"><i class="bi bi-trash3"></i></a></td>
+							
+							<td><a href="#" th:href="@{/borrarProducto/{id}(id=${productos.id})}">
+								<button type="button" class="btn btn-danger" data-toggle="modal"
+									data-target="#delete-modal"><i class="bi bi-trash3"></i></button></a>
+							</td>
 						</tr>
 
 					</tbody>
 				</table>
+			</div>
+		</div>
+	</div>
+	
+	<div class="modal fade" id="delete-modal" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title">Borrar Producto</h4>
+				</div>
+				<div class="modal-body">
+					<p>¿Está usted seguro de borrar este producto?</p>
+					<button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+					<a href="#" class="btn btn-danger">Sí</a>
+				</div>
+			</div>
+
+		</div>
+</div>
 
 
 </body>
